# autogluon-assistant

./: pyproject.toml
src/autogluon/assistant/: coding_agent.py
src/autogluon/assistant/agents/: description_file_retriever_agent.py  task_descriptor_agent.py
src/autogluon/assistant/cli/: app.py
src/autogluon/assistant/configs/: bedrock.yaml
src/autogluon/assistant/managers/: node_manager.py
src/autogluon/assistant/prompts/: base_prompt.py  python_coder_prompt.py  python_reader_prompt.py  task_descriptor_prompt.py
src/autogluon/assistant/tools_registry/: registry.py  utils.py
src/autogluon/assistant/tools_registry/FlagEmbedding/condensed_tutorials/: quick_start.md
src/autogluon/assistant/tools_registry/FlagEmbedding/condensed_tutorials/1_Embedding/: 1.1_Intro&Inference.md  1.2.1_BGE_Series.md  1.2.2_Auto_Embedder.md  1.2.3_BGE_v1&1.5.md  1.2.4_BGE-M3.md  1.2.5_BGE_EN_ICL.md
src/autogluon/assistant/tools_registry/FlagEmbedding/condensed_tutorials/2_Metrics/: 2.1_Similarity_Metrics.md  2.2_Eval_Metrics.md
src/autogluon/assistant/tools_registry/FlagEmbedding/condensed_tutorials/3_Indexing/: 3.1.1_Intro_to_Faiss.md  3.1.2_Faiss_GPU.md  3.1.3_Faiss_Indexes.md  3.1.4_Faiss_Quantizers.md  3.1.5_Faiss_Index_Choosing.md
src/autogluon/assistant/tools_registry/FlagEmbedding/condensed_tutorials/4_Evaluation/: 4.1.1_Evaluation_MSMARCO.md  4.2.1_MTEB_Intro.md  4.2.2_MTEB_Leaderboard.md  4.2.3_C-MTEB.md  4.3.1_Sentence_Transformers_Eval.md  4.4.1_BEIR.md  4.5.1_MIRACL.md  4.5.2_MLDR.md
src/autogluon/assistant/tools_registry/FlagEmbedding/condensed_tutorials/5_Reranking/: 5.1_Intro.md  5.2_BGE_Reranker.md  5.3_Reranker_Eval.md
src/autogluon/assistant/tools_registry/FlagEmbedding/condensed_tutorials/6_RAG/: 6.1_RAG_From_Scratch.md  6.2_RAG_LangChain.md  6.3_RAG_LlamaIndex.md
src/autogluon/assistant/tools_registry/FlagEmbedding/condensed_tutorials/7_Fine-tuning/: 7.1.1_Data_preparation.md  7.1.2_Fine-tune.md  7.1.3_Eval_FT_Model.md
src/autogluon/assistant/tools_registry/autogluon.multimodal/condensed_tutorials/advanced_topics/: continuous_training.md  customization.md  efficient_finetuning_basic.md  few_shot_learning.md  focal_loss.md  hyperparameter_optimization.md  model_distillation.md  presets.md  tensorrt.md  (+2 more)
src/autogluon/assistant/tools_registry/autogluon.tabular/condensed_tutorials/: tabular-essentials.md  tabular-feature-engineering.md  tabular-foundational-models.md  tabular-indepth.md  tabular-multimodal.md  tabular-quick-start.md
src/autogluon/assistant/tools_registry/autogluon.timeseries/condensed_tutorials/: forecasting-chronos.md  forecasting-indepth.md  forecasting-quick-start.md
src/autogluon/assistant/tools_registry/machine learning/condensed_tutorials/: intro.md
src/autogluon/assistant/tools_registry/qwen3/condensed_tutorials/: qwen3-0.6b.md
src/autogluon/assistant/tools_registry/wav2vec2/condensed_tutorials/: fine-tune-w2v2-bert.md
tools/: regenerate_condensed.py
(+40 files in other folders)
